<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btnSequential"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/sequential" />

        <Button
            android:id="@+id/btnFade"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnSequential"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/fade" />

        <Button
            android:id="@+id/btnRotate"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnFade"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/rotate" />

        <Button
            android:id="@+id/btnZoom"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnRotate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/zoom" />

        <Button
            android:id="@+id/btnBlink"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnZoom"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/blink" />

        <Button
            android:id="@+id/btnScale"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnBlink"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/scale" />

        <Button
            android:id="@+id/btnAlpha"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnScale"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/alpha" />

        <Button
            android:id="@+id/btnSlide"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnAlpha"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/slide_below" />

        <Button
            android:id="@+id/btnSlideAbove"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnSlide"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/slide_above" />

        <Button
            android:id="@+id/btnSlideRight"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnSlideAbove"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/slide_right" />

        <Button
            android:id="@+id/btnSlideLeft"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnSlideRight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/slide_left" />

        <Button
            android:id="@+id/btnCoinFlip"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnSlideLeft"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/coin_flip" />

        <Button
            android:id="@+id/btnFrameAnimation"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btnCoinFlip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rectangle"
            android:textColor="@color/white_to_black"
            android:text="@string/frame_animation" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@+id/btnFrameAnimation"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:transitionName="transition_reveal_contact"
            android:src="@drawable/ic_arrow_forward_white_24dp"
            app:fabSize="normal"
            app:layout_behavior="com.dnsoftindia.animationdemo.FabCustomBehavior"
            app:layout_anchorGravity="bottom|right|end"
            app:backgroundTint="@color/colorAccent" />

    </RelativeLayout>
</ScrollView>